MDEV-238: SHOW EXPLAIN: Server crashes in JOIN::print_explain with FROM subquery and GROUP BY - Support SHOW EXPLAIN for selects that have "Using temporary; Using filesort".